# the-sniper-bot

./: Cargo.toml  README.md  Settings.toml
logs/: bot.log.2026-02-13
src/: config.rs  main.rs  types.rs
src/connectors/: binance.rs  messages.rs  mod.rs  traits.rs
src/core/: engine.rs
src/strategies/: mod.rs  scalper.rs  traits.rs
src/tui/: mod.rs
src/utils/: mod.rs  precision.rs
