[package]
name = "the_sniper"
version = "0.1.0"
edition = "2021"
authors = ["TemirlanVinci"]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"                               # Essential for Traits in Hexagonal Arch

# Networking & HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Database (Embedded KV)
sled = "0.34"

# TUI (Terminal UI)
ratatui = "0.26"
crossterm = "0.27"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
