[package]
name = "the_sniper"
version = "0.1.0"
edition = "2021"
authors = ["TemirlanVinci"]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
ta = "0.5.0"

# Networking & HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Database
sled = "0.34"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3.31"

# --- NEW: Math & Precision ---
rust_decimal = { version = "1.33", features = ["maths", "serde-with-str"] }
rust_decimal_macros = "1.33"
